# forgotify

./: .dockerignore  .env.example  CHANGELOG.md  README.md
.github/workflows/: base-ci.yml  base-workflow.yml  base.yml  cd.yml  changelog-changes.yml  changelog.yml  ci-base.yml  ci.yml  continuous-deployment.yml  continuous-integration-base.yml  continuous-integration-matrix.yml  continuous-integration.yml  database-tools.yml  libs-database-tools-ci.yml  libs-media-tools-ci.yml  projects-batch-database-update-ci.yml
dockerfiles/: Dockerfile.aws
infra/: Dockerfile  Makefile  Pulumi.dev.yaml  Pulumi.qa.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml  requirements.txt
infra/components/: databases.py
infra/databases/medias/: Pulumi.yaml  __main__.py
infra/infra/: buckets.py  databases.py  functions.py  queues.py  roles.py  topics.py  triggers.py
infra/infra/functions/: __init__.py  scrape_artists.py  scrape_tracks.py  scrape_trigger.py
infra/src/: databases.py  security_groups.py
libs/cloud-tools/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
libs/cloud-tools/cloud_tools/: messenger.py  queue.py
libs/cloud-tools/tests/integration/: test_messenger.py  test_queue.py
libs/database-tools/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
libs/database-tools/database_tools/: postgres.py  storage.py
libs/database-tools/tests/integration/: test_postgres.py  test_storage.py
libs/media-tools/: Dockerfile  Makefile  README.md  pyproject.toml
libs/media-tools/media_tools/: __init__.py  schemas.py  search.py  utils.py
libs/media-tools/tests/unit/: test_search.py
makefiles/: Alembic.mk  Docker.mk  Lint.mk  Pytest.mk  Registry.mk
pipelines/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  workspace.yaml
pipelines/pipelines/: __init__.py  batch_database_update.py  repository.py
pipelines/pipelines/jobs/: batch_database_update.py
pipelines/pipelines/schedules/: batch_database_update.py
pipelines/tests/unit/: test_batch_database_update.py  test_repository.py
pipelines/tests/unit/jobs/: test_batch_database_update.py
projects/batch-database-update/: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
projects/batch-database-update/batch_database_update/: database.py  main.py  media.py  models.py
projects/batch-database-update/migrations/: env.py
projects/batch-database-update/migrations/versions/: 1fd33fc239d2_create_tracks_table.py  c3234d2b1d35_create_artists_table.py
projects/batch-database-update/tests/integration/: test_database.py  test_main.py
projects/batch-database-update/tests/system/: test_main.py
projects/batch-database-update/tests/unit/: test_media.py
projects/scrape-artists/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/scrape-artists/scrape_artists/: exceptions.py  main.py
projects/scrape-artists/tests/integration/: test_main.py
projects/scrape-tracks/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/scrape-tracks/scrape_tracks/: main.py
projects/scrape-tracks/tests/integration/: test_main.py
projects/scrape-trigger/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
projects/scrape-trigger/scrape_trigger/: exceptions.py  main.py
projects/scrape-trigger/tests/integration/: test_main.py
projects/scrape-trigger/tests/unit/: test_main.py
projects/server/: Dockerfile  Makefile  README.md  pyproject.toml
projects/server/server/: main.py  media.py
projects/server/tests/unit/: test_main.py
scripts/: aws-lambda-entrypoint.sh  join_paths_with_wildcard.sh  list_package_dependencies.sh
tools/: Alembic.mk  Docker.mk  Poetry.mk  Test.mk
