[tool.poetry]
name = "infra"
version = "0.1.0"
description = ""
authors = ["Luiz Felipe Manke <luizmanke@gmail.com>"]
readme = "README.md"
packages = [{include = "infra"}]

[tool.poetry.dependencies]
pulumi = "^3.46.0"
pulumi-aws = "^5.19.0"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
flake8 = "^5.0.4"
mypy = "^0.971"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
