[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Luiz Felipe Manke <luizmanke@gmail.com>"]
readme = "README.md"
packages = [{include = "pipelines"}]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^1.0.15"
dagit = "^1.0.15"
batch-database-update = { path = "../projects/batch-database-update" }

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
flake8 = "^5.0.4"
mypy = "^0.971"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
