[tool.poetry]
name = "database-tools"
version = "0.1.0"
description = ""
authors = ["Luiz Felipe Manke <luizmanke@gmail.com>"]
readme = "README.md"
packages = [{include = "database_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"
pytest = "^7.1.3"
sqlalchemy-stubs = "^0.4"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
