[tool.poetry]
name = "scrape-tracks"
version = "0.1.0"
description = ""
authors = ["Luiz Felipe Manke <luizmanke@gmail.com>"]
readme = "README.md"
packages = [{include = "scrape_tracks"}]

[tool.poetry.dependencies]
awslambdaric = "^2.0.4"
loguru = "^0.7.0"
python = "^3.9"
database-tools = { path = "../../libs/database-tools", extras = ["storage"] }
media-tools = { path = "../../libs/media-tools" }

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
flake8 = "^5.0.4"
freezegun = "^1.2.2"
mypy = "^0.971"
pytest = "^7.1.3"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
