[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Luiz Felipe Manke <luizmanke@gmail.com>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
fastapi = "^0.88.0"
gunicorn = "^20.1.0"
httpx = "^0.23.1"
loguru = "^0.6.0"
pytest-mock = "^3.10.0"
python = "^3.9"
uvicorn = "^0.20.0"
media-tools = { path = "../../libs/media-tools" }

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
flake8 = "^5.0.4"
mypy = "^0.971"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
